--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-paginate": "^1.0.2",
     "express-session": "^1.17.3",
     "fs-extra": "^11.2.0",
     "html-pdf": "^3.0.1",
